--- a/c4/static_web/Dockerfile
+++ b/c4/static_web/Dockerfile
@@ -1,7 +1,8 @@
  # Version: 0.0.1
    FROM ubuntu:15.10
    MAINTAINER Brian Maher "briancmaher@gmail.com"
-   RUN apt-get update && apt-get install -y nginx
+   RUN apt-get update 
+   RUN apt-get install -y nginx
    RUN echo 'Hi, I am in your container' \
        >/usr/share/nginx/html/index.html
    EXPOSE 80
