Overwrite default nginx text.

--- a/c4/static_web/Dockerfile
+++ b/c4/static_web/Dockerfile
@@ -3,6 +3,6 @@
    MAINTAINER Brian Maher "briancmaher@gmail.com"
    RUN apt-get update 
    RUN apt-get install -y nginx
-   RUN echo 'Hi, I am in your container' \
-       >/usr/share/nginx/html/index.html
+   RUN echo 'bmaher.com' \
+       >/var/www/html/index.nginx-debian.html
    EXPOSE 80
