Use ADD over RUN echo for creating index.html.

--- a/c4/static_web/Dockerfile
+++ b/c4/static_web/Dockerfile
@@ -1,9 +1,9 @@
  # Version: 0.0.1
    FROM ubuntu:15.10
    MAINTAINER Brian Maher "briancmaher@gmail.com"
-   RUN apt-get update 
+   RUN apt-get update
+   RUN apt-get install -y vim 
    RUN apt-get install -y nginx
-   RUN echo 'bmaher.com' \
-       >/var/www/html/index.nginx-debian.html
+   ADD index.html /var/www/html/
    ENTRYPOINT ["/usr/sbin/nginx", "-g", "daemon off;"]
    EXPOSE 80
