--- a/c5/jenkins/Dockerfile
+++ b/c5/jenkins/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:wily
 MAINTAINER Brian Maher "briancmaher@gmail.com"
 ENV REFRESHED_AT 2016-03-03
 
@@ -7,7 +7,7 @@ RUN apt-get update -qq && apt-get install -qqy curl apt-transport-https
 RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 RUN echo deb https://apt.dockerproject.org/repo ubuntu-wily main > /etc/apt/sources.list.d/docker.list
 
-RUN apt-get update -qq && apt-get install -qqy iptables ca-certificates openjdk-7-jdk git-core docker-engine
+RUN apt-get update -qq && apt-get install -qqy iptables openjdk-7-jdk git-core docker-engine ca-certificates
 
 ENV JENKINS_HOME /opt/jenkins/data
 ENV JENKINS_MIRROR http://mirrors.jenkins-ci.org
